--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.4.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>com.universidade</groupId>
 	<artifactId>Pessoas_Api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Pessoas</name>
